syntax = "proto3";
package main;
option go_package = "./";

message TestInner {
    string innerA = 1;
}

message TestMarshal {
    int64 a = 1;
    string b = 2;
    bool c = 3;
    TestInner d = 4;
    map<uint64, string> e = 5;
    repeated string f = 6;
}

// protoc -I=$SRC_DIR --go_out=$DST_DIR $SRC_DIR/addressbook.proto